--- a/index.html
+++ b/index.html
@@ -36,3 +36,17 @@
         </div>
     </div>
 </nav>
+
+<!-- Content -->
+<div class="container">
+    <h2 class="display-4 mb-3">Content</h2>
+    <p>I can put my Vue/React 3d portfolio here without need of domain</p>
+    <p>Here I can update CDR soft</p>
+</div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+</body>
+</html>
